Spacing fixes + removed sections

--- a/src/components/ContentPadding/ContentPadding.module.css
+++ b/src/components/ContentPadding/ContentPadding.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 20rem 5rem;
+  padding: 10rem 5rem;
   background-color: transparent;
   /* border-left: 1px solid var(--lightBlack);
   border-right: 1px solid var(--lightBlack); */
